# SDF_utilities

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CommitInfo.cmake  LICENSE  LICENSE_README.txt  SDFUtilitiesConfig.cmake.in  build  build.sh  gen_commit_string.sh  pyproject.toml  sdf2ascii.adoc  sdf2ascii.c  sdf_helper.py  sdf_legacy.py  sdf_python.c  sdfdiff.c  sdffilter.adoc  sdffilter.c  sdfpy_install.cmake.in  setup.cfg.in  setup.py  setup.py.in  wheel_name.py
.github/workflows/: build_test.yml
getopt_windows/: README
sdf_helper/: HDF5_plotter.py  SDF2HDF5.py  __init__.py  read_nameval.py  sdf_helper.py  visit_cmap.py
